# PennHaTT_MLHD

./: CMakeLists.txt  NOTES.txt  README.md
GL/: CMakeLists.txt
images/: CMakeLists.txt
include/: AccSynthHashMatrix.h  CMakeLists.txt  Constants.h  autoGenHashMatrix.h  shared.h  sharedInit.h
lib/: CMakeLists.txt
ml/: CMakeLists.txt  ml_api.c  ml_api_1.h  ml_api_callback.h  ml_communication.h  ml_error.h  ml_serialization.h  ml_types.h
ml/.svn/: entries
ml/.svn/text-base/: math_utils.h.svn-base  ml_api.h.svn-base  ml_api_common.h.svn-base  ml_constants.h.svn-base
src/: AccSynthHashMatrix.cpp  CMakeLists.txt  helper.cpp  main_mlhd.cpp
